--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "google/recaptcha": "^1.1",
     "symfony/form": "^2.8 || ^3.0 || ^4.0",
     "symfony/framework-bundle": "^2.8 || ^3.0 || ^4.0",
-    "symfony/security-bundle": "^2.8 || ^3.0 || ^4.0",
+    "symfony/security-core": "^2.8 || ^3.0 || ^4.0",
     "symfony/validator": "^2.8 || ^3.0 || ^4.0",
     "twig/twig": "^1.40 || ^2.9"
   },
